--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+/node_modules
+/dist
+/dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+/.vscode
+/.idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+.gitignore
+
