--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.1.7",
     "sass": "^1.77.1",
     "vite-plugin-pages": "^0.32.1",
+    "vite-plugin-prerender": "^1.0.8",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
